added onclick to images. Links to single_product

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!--New start-->
     <section id="new" class="w-100">
         <div class="row p-0 m-0">
-            <div class="one col-lg-4 col-md-12 col-sm-12 p-0">
+            <div onclick="window.location.href='single_product.html'" class="one col-lg-4 col-md-12 col-sm-12 p-0">
                 <img class="img-fluid" src="assets/images/Lace-up-Sneakers-GREY-505479330-side.jpg" alt="">
                 <div class="details">
                     <h2 >
@@ -82,7 +82,7 @@
                     </button>
                 </div>
             </div>
-            <div class="one col-lg-4 col-md-12 col-sm-12 p-0">
+            <div onclick="window.location.href='single_product.html'" class="one col-lg-4 col-md-12 col-sm-12 p-0">
                 <img class="img-fluid" src="assets/images/Lace-up-Sneakers-GREY-505479330-side.jpg" alt="">
                 <div class="details">
                     <h2 >
@@ -93,7 +93,7 @@
                     </button>
                 </div>
             </div>
-            <div class="one col-lg-4 col-md-12 col-sm-12 p-0">
+            <div onclick="window.location.href='single_product.html'" class="one col-lg-4 col-md-12 col-sm-12 p-0">
                 <img class="img-fluid" src="assets/images/Lace-up-Sneakers-GREY-505479330-side.jpg" alt="">
                 
                     <div class="details">
@@ -123,7 +123,7 @@
             </p>
         </div>
         <div class="row mx-auto container-fluid">
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -138,7 +138,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -153,7 +153,7 @@
                 <h4 class="p-price">R400</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Australian-Cotton-Stripe-Pique-Polo-NAVY-505691304.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -168,7 +168,7 @@
                 <h4 class="p-price">R700</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/StayNew-Slim-Fit-V-neck-Cotton-T-shirt-ICE-506080516-top.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -209,7 +209,7 @@
             </p>
         </div>
         <div class="row mx-auto container-fluid">
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Australian-Cotton-Stripe-Pique-Polo-NAVY-505691304.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -224,7 +224,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Micro-Stripe-Pima-Crew-T-Shirt-MID-GREY-505636384.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -239,7 +239,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/StayNew-Slim-Fit-V-neck-Cotton-T-shirt-ICE-506080516.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -254,7 +254,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Micro-Stripe-Pima-Crew-T-Shirt-MID-GREY-505636384-styled.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -285,7 +285,7 @@
             </p>
         </div>
         <div class="row mx-auto container-fluid">
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -300,7 +300,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-styled.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -315,7 +315,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Comfort-Derby-Shoes-BLACK-506058246.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -330,7 +330,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Cursive-Logo-Flip-Flops-NAVY-506214520.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -361,7 +361,7 @@
             </p>
         </div>
         <div class="row mx-auto container-fluid">
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Badge-Logo-Baseball-Cap-GREY-506064268-angle.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -376,7 +376,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Flat-Cap-X-NAVY-506085200-angle.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -391,7 +391,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Straw-Panama-Hat-X-NATURAL-506065236-angle.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -406,7 +406,7 @@
                 <h4 class="p-price">R600</h4>
                 <button class="buy-btn">Buy Now</button>
             </div>
-            <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+            <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
                 <img src="assets/images/Badge-Logo-Baseball-Cap-GREY-506064268-styled.jpg" class="img-fluid mb-3" alt="">
                 <div class="star">
                     <i class="fas fa-star"></i>
