--- a/shop.html
+++ b/shop.html
@@ -53,7 +53,7 @@
         </p>
     </div>
     <div class="row mx-auto container">
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -68,7 +68,7 @@
             <h4 class="p-price">R600</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -83,7 +83,7 @@
             <h4 class="p-price">R400</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Australian-Cotton-Stripe-Pique-Polo-NAVY-505691304.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -98,7 +98,7 @@
             <h4 class="p-price">R700</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/StayNew-Slim-Fit-V-neck-Cotton-T-shirt-ICE-506080516-top.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="row mx-auto container-fluid">
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -130,7 +130,7 @@
             <h4 class="p-price">R600</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -145,7 +145,7 @@
             <h4 class="p-price">R400</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Australian-Cotton-Stripe-Pique-Polo-NAVY-505691304.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -160,7 +160,7 @@
             <h4 class="p-price">R700</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/StayNew-Slim-Fit-V-neck-Cotton-T-shirt-ICE-506080516-top.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -177,7 +177,7 @@
         </div>
     </div>
     <div class="row mx-auto container-fluid">
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Lace-up-Sneakers-NAVY-505479330.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -192,7 +192,7 @@
             <h4 class="p-price">R600</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Adventure-Outdoor-Sandals-BROWN-505479460-side.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -207,7 +207,7 @@
             <h4 class="p-price">R400</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/Australian-Cotton-Stripe-Pique-Polo-NAVY-505691304.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
@@ -222,7 +222,7 @@
             <h4 class="p-price">R700</h4>
             <button class="buy-btn">Buy Now</button>
         </div>
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
             <img src="assets/images/StayNew-Slim-Fit-V-neck-Cotton-T-shirt-ICE-506080516-top.jpg" class="img-fluid mb-3" alt="">
             <div class="star">
                 <i class="fas fa-star"></i>
