--- a/cart.html
+++ b/cart.html
@@ -32,11 +32,11 @@
                         <a href="#" class="nav-link">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Conctact Us</a>
+                        <a href="contact.html" class="nav-link">Conctact Us</a>
                     </li>
                     <li class="nav-item">
-                        <i class="fas fa-shopping-cart"></i>
-                        <i class="fas fa-user"></i>
+                        <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                        <a href="account.html"><i class="fas fa-user"></i></a>
                     </li>
                     <li class="nav-item">
                         
