--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                         <a href="#" class="nav-link">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Conctact Us</a>
+                        <a href="contact.html" class="nav-link">Conctact Us</a>
                     </li>
                     <li class="nav-item">
-                        <i class="fas fa-shopping-cart"></i>
-                        <i class="fas fa-user"></i>
+                        <i class="fas fa-shopping-cart"><a href="cart.html"></a></i>
+                        <i class="fas fa-user"><a href="account.html"></a></i>
                     </li>
                     <li class="nav-item">
                         
