--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top py-3">
         <div class="container">
             <div>
-                <a href="#" class="navbar-brand">ShopItAll</a>
+                <a href="index.html" class="navbar-brand">ShopItAll</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,11 +27,11 @@
                         <a href="#" class="nav-link">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Conctact Us</a>
+                        <a href="contact.html" class="nav-link">Conctact Us</a>
                     </li>
                     <li class="nav-item">
-                        <i class="fas fa-shopping-cart"></i>
-                        <i class="fas fa-user"></i>
+                        <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                        <a href="account.html"><i class="fas fa-user"></i></a>
                     </li>
                     <li class="nav-item">
                         
